improved texture filtering on mobile, fix ui buttons bug, minor cleanup

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -130,6 +130,7 @@ input[type="range"]::-moz-range-track {
   width: 100%;
   display: flex;
   justify-content: center;
+  align-items: flex-end;
 }
 #controlsCont button {
   width: 25%;
